; ModuleID = '/home/carl/AnghaBench/radare2/libr/cons/extr_pal.c_rgbnum.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/cons/extr_pal.c_rgbnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8, i8)* @rgbnum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rgbnum(i8 signext %0, i8 signext %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8 %0, i8* %3, align 1
  store i8 %1, i8* %4, align 1
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = load i8, i8* %3, align 1
  %8 = call i32 @r_hex_to_byte(i32* %5, i8 signext %7)
  %9 = load i8, i8* %4, align 1
  %10 = call i32 @r_hex_to_byte(i32* %6, i8 signext %9)
  %11 = load i32, i32* %5, align 4
  %12 = shl i32 %11, 4
  %13 = load i32, i32* %6, align 4
  %14 = or i32 %12, %13
  ret i32 %14
}

declare dso_local i32 @r_hex_to_byte(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
